Commit Menu Mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <script>document.documentElement.className += ' js';</script>
 
 </head>
-
 <body>
     <header class="topo">
         <nav class="nav-bar container cor-0 font-1-b">
@@ -54,7 +53,7 @@
         </nav>
         <ul id="menu-items" class="menu-items cor-0 font-1-b">
             <li class="menu-item">
-                <a  href="#about">SOBRE</a>
+                <a href="#about">SOBRE</a>
             </li>
             <li class="menu-item">
                 <a onclick="abrir()" href="#services">SERVIÇOS</a>
@@ -69,189 +68,191 @@
                 <a onclick="abrir()" href="#">REGISTRE-SE</a>
             </li>
         </ul>
-       
     </header>
 
-    <section class="introducao-bg box-apresentacao">
-        <div class="introducao container">
-            <div class="informacao">
-                <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
-                <p class=" font-3-m cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
-                <ul>
-                    <li class="item-introducao">
-                        <a class="item-introducao-a font-1-bn cor-0" href="#">Começar<img class="item-introducao-img" src="media/svg/arrow_introducao.svg" alt=""></a>
-                    </li>
-                </ul>
+    <main>
+        <section class="introducao-bg box-apresentacao">
+            <div class="introducao container">
+                <div class="informacao">
+                    <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
+                    <p class=" font-3-m cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
+                    <ul>
+                        <li class="item-introducao">
+                            <a class="item-introducao-a font-1-bn cor-0" href="#">Começar<img class="item-introducao-img" src="media/svg/arrow_introducao.svg" alt=""></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="imagem-introducao"><img src="media/img/homem_treinando 1.png" alt=""></div>
+                <div class="container-cores">
+                    <div class="cor-primaria"></div>
+                    <div class="cor-secundaria"></div>
+                    <div class="cor-terciaria"></div>
+                </div>
             </div>
-            <div class="imagem-introducao"><img src="media/img/homem_treinando 1.png" alt=""></div>
-            <div class="container-cores">
-                <div class="cor-primaria"></div>
-                <div class="cor-secundaria"></div>
-                <div class="cor-terciaria"></div>
-            </div>
-        </div>
-    </section>
-    <section class="letreiro-bg">
-        <div class="letreiro">
-            <p class="texto-letreiro font-1-bn cor-0">Consultoria Indidvidual</p>
-            <img src="media/img/halter.png" alt="">
-            <p class="texto-letreiro font-1-bn cor-0">+20 Professores</p>
-            <img src="media/img/halter.png" alt="">
-            <p class="texto-letreiro font-1-bn cor-0">Treine da sua forma</p>
-            <img src="media/img/halter.png" alt="">
-            <p class="texto-letreiro font-1-bn cor-0">+15 Unidades</p>
-            <img src="media/img/halter.png " alt="">
-            <p class="texto-letreiro font-1-bn cor-0">Montamos seu treino</p>
-        </div>
-    </section>
-    <article class="diferenciais-bg">
-        <div class="titulo-diferenciais">
-            <h1 class="font-2-l cor-0">Nossos <span class="font-1-l">Diferenciais</span></h1>
-        </div>
-        <div class="diferenciais container">
-            <div class="equipe">
-                <img class="imagem-ilustracao" src="media/img/sport_icon.png" alt="">
-                <h2 class="font-1-s cor-0">Equipe Qualificada</h2>
-                <p class="font-3-m cor-0">Profissionais altamente capacitados e motivados a ajudá-lo a alcançar seus objetivos.</p>
-                <ul>
-                    <li class="item-introducao-diferenciais font-1-xs cor-0">
-                        <a href="#">Conheça nossos<br> profissionais<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="ambiente">
-                <img class="imagem-ilustracao" src="media/img/haltere_icon.png" alt="">
-                <h2 class="font-1-s cor-0">Ambiente Motivador</h2>
-                <p class="font-3-m cor-0">Um ambiente seguro e inspirador para ajudá-lo a manter-se motivado durante seus treinos.</p>
-                <ul>
-                    <li class="item-introducao-diferenciais font-1-xs cor-0">
-                        <a href="#">Faça um tour<br> virtual<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="aulas">
-                <img class="imagem-ilustracao" src="media/img/trainer _icon.png" alt="">
-                <h2 class="font-1-s cor-0">Aulas Diversas</h2>
-                <p class="font-3-m cor-0">Oferecemos uma ampla variedade de aulas, desde musculação até dança, para atender a todos os interesses.</p>
-                <ul>
-                    <li class="item-introducao-diferenciais font-1-xs cor-0">
-                        <a href="#">Ver Modalidades<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="equipamentos">
-                <img class="imagem-ilustracao" src="media/img/gym_icon.png" alt="">
-                <h2 class="font-1-s cor-0">Equipamentos Modernos</h2>
-                <p class="font-3-m cor-0">Mantemos nossos equipamentos atualizados para garantir a segurança e eficiência de nossos clientes.</p>
-                <div class="item-ul">
-                <ul>
-                    <li class="item-introducao-diferenciais font-1-xs cor-0">
-                        <a href="#">Faça um Tour<br>Virtual<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
-                    </li>
-                </ul>
-            </div>
+        </section>
+        <div class="letreiro-bg">
+            <div class="letreiro">
+                <p class="texto-letreiro font-1-bn cor-0">Consultoria Indidvidual</p>
+                <img src="media/img/halter.png" alt="">
+                <p class="texto-letreiro font-1-bn cor-0">+20 Professores</p>
+                <img src="media/img/halter.png" alt="">
+                <p class="texto-letreiro font-1-bn cor-0">Treine da sua forma</p>
+                <img src="media/img/halter.png" alt="">
+                <p class="texto-letreiro font-1-bn cor-0">+15 Unidades</p>
+                <img src="media/img/halter.png " alt="">
+                <p class="texto-letreiro font-1-bn cor-0">Montamos seu treino</p>
             </div>
         </div>
-    </article>
-    <!-- <section class="planos-bg">
-        <div class="planos">
-            <div class="treino-1">
-                <img src="media/img/treino_1.jpg" alt="">
-                <h2>Passe de um Dia</h2>
-                <div class="planos-preco">
-                    <div>
-                        <p>teste Gratuitamente</p>
+        <article>
+            <div class="diferenciais-bg">
+                <div class="titulo-diferenciais">
+                    <h1 class="font-2-l cor-0">Nossos <span class="font-1-l">Diferenciais</span></h1>
+                </div>
+                <div class="diferenciais container">
+                    <div class="equipe">
+                        <img class="imagem-ilustracao" src="media/img/sport_icon.png" alt="">
+                        <h2 class="font-1-s cor-0">Equipe Qualificada</h2>
+                        <p class="font-3-m cor-0">Profissionais altamente capacitados e motivados a ajudá-lo a alcançar seus objetivos.</p>
+                        <ul>
+                            <li class="item-introducao-diferenciais font-1-xs cor-0">
+                                <a href="#">Conheça nossos<br> profissionais<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
+                            </li>
+                        </ul>
                     </div>
-                    <div>
-                        <div>
-                            <p>Selecionar</p>
+                    <div class="ambiente">
+                        <img class="imagem-ilustracao" src="media/img/haltere_icon.png" alt="">
+                        <h2 class="font-1-s cor-0">Ambiente Motivador</h2>
+                        <p class="font-3-m cor-0">Um ambiente seguro e inspirador para ajudá-lo a manter-se motivado durante seus treinos.</p>
+                        <ul>
+                            <li class="item-introducao-diferenciais font-1-xs cor-0">
+                                <a href="#">Faça um tour<br> virtual<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="aulas">
+                        <img class="imagem-ilustracao" src="media/img/trainer _icon.png" alt="">
+                        <h2 class="font-1-s cor-0">Aulas Diversas</h2>
+                        <p class="font-3-m cor-0">Oferecemos uma ampla variedade de aulas, desde musculação até dança, para atender a todos os interesses.</p>
+                        <ul>
+                            <li class="item-introducao-diferenciais font-1-xs cor-0">
+                                <a href="#">Ver Modalidades<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="equipamentos">
+                        <img class="imagem-ilustracao" src="media/img/gym_icon.png" alt="">
+                        <h2 class="font-1-s cor-0">Equipamentos Modernos</h2>
+                        <p class="font-3-m cor-0">Mantemos nossos equipamentos atualizados para garantir a segurança e eficiência de nossos clientes.</p>
+                        <div class="item-ul">
+                            <ul>
+                                <li class="item-introducao-diferenciais font-1-xs cor-0">
+                                    <a href="#">Faça um Tour<br>Virtual<img src="media/svg/arrow_diferenciais.svg" alt=""></a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="treino-2">
-                <div class="item-central">
-                    <p>Recomendado por usuários</p>
-                </div>
-                <img src="media/img/treino_2.jpg" alt="">
-                <h2>Passe de um Dia</h2>
-                <div class=" planos-preco">
-                    <div>
-                        <p>À partir de <br><span>R$99,90</span></p>
-                    </div>
-                    <div>
+        </article>
+        <section class="planos-bg">
+            <div class="planos">
+                <div class="treino-1">
+                    <img src="media/img/treino_1.jpg" alt="">
+                    <h2>Passe de um Dia</h2>
+                    <div class="planos-preco">
                         <div>
-                            <p>Selecionar</p>
+                            <p>teste Gratuitamente</p>
+                        </div>
+                        <div>
+                            <div>
+                                <p>Selecionar</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="treino-2">
+                    <div class="item-central">
+                        <p>Recomendado por usuários</p>
+                    </div>
+                    <img src="media/img/treino_2.jpg" alt="">
+                    <h2>Passe de um Dia</h2>
+                    <div class=" planos-preco">
+                        <div>
+                            <p>À partir de <br><span>R$99,90</span></p>
+                        </div>
+                        <div>
+                            <div>
+                                <p>Selecionar</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="treino-3">
+                    <img src="media/img/treino_3.jpg" alt="">
+                    <h2>Passe de um Dia</h2>
+                    <div class="planos-preco">
+                        <div>
+                            <p>À partir de <br><span>R$999,00</span></p>
+                        </div>
+                        <div>
+                            <div>
+                                <p>Selecionar</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="treino-3">
-                <img src="media/img/treino_3.jpg" alt="">
-                <h2>Passe de um Dia</h2>
-                <div class="planos-preco">
-                    <div>
-                        <p>À partir de <br><span>R$999,00</span></p>
+        </section>
+        <section class="vantagens-bg">
+            <div class="vantagens">
+                <div><img src="media/img/homem_e_mulher_treinando.png" alt=""></div>
+                <div>
+                    <div class="titulo-vantagens">
+                        <h1>Faça Parte <span>da família</span></h1>
+                        <p>Nossa academia tem milhares de clientes satisfeitos com resultados surpreendentes. Junte-se a nós e comece a transformar seu corpo agora!</p>
                     </div>
-                    <div>
-                        <div>
-                            <p>Selecionar</p>
-                        </div>
+                    <div class="vantangens-1">
+                        <h2>+15</h2>
+                        <p>Unidades na cidade de São Paulo</p>
+                    </div>
+                    <div class="vantangens-1">
+                        <h2>+2000</h2>
+                        <p>Alunos matriculados em nossas unidades</p>
+                    </div>
+                    <div class="vantangens-1">
+                        <h2>+100</h2>
+                        <p>Professores altamente qualificados</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="vantagens-bg">
-        <div class="vantagens">
-            <div><img src="media/img/homem_e_mulher_treinando.png" alt=""></div>
-            <div>
-                <div class="titulo-vantagens">
-                    <h1>Faça Parte <span>da família</span></h1>
-                    <p>Nossa academia tem milhares de clientes satisfeitos com resultados surpreendentes. Junte-se a nós e comece a transformar seu corpo agora!</p>
+        </section>
+        <section class="contato-bg">
+            <div class="contato">
+                <div>
+                    <h1>Entre em Contato</h1>
+                    <p>Matricule-se agora mesmo! Fale com um de nossos atendentes</p>
+                    <form class="newsletter-form">
+                        <input type="text" placeholder="Nome">
+                    </form>
+                    <form class="newsletter-form">
+                        <input type="number" placeholder="Telefone">
+                    </form>
+                    <ul>
+                        <li class="item-contato">
+                            <a href="#"><img src="media/img/arrow.png" alt="">Solicitar Contato</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="vantangens-itens">
-                    <h2>+15</h2>
-                    <p>Unidades na cidade de São Paulo</p>
-                </div>
-                <div class="vantangens-itens">
-                    <h2>+2000</h2>
-                    <p>Alunos matriculados em nossas unidades</p>
-                </div>
-                <div class="vantangens-itens">
-                    <h2>+100</h2>
-                    <p>Professores altamente qualificados</p>
-                </div>
+                <div><img src="media/img/mulher-treinando.png" alt=""></div>
             </div>
-        </div>
-    </section>
-    <section class="contato-bg">
-        <div class="contato">
-            <div>
-                <h1>Entre em Contato</h1>
-                <p>Matricule-se agora mesmo! Fale com um de nossos atendentes</p>
-                <form class="newsletter-form">
-                    <input type="text" placeholder="Nome">
-                </form>
-                <form class="newsletter-form">
-                    <input type="number" placeholder="Telefone">
-                </form>
-                <ul>
-                    <li class="item-contato">
-                        <a href="#"><img src="media/img/arrow.png" alt="">Solicitar Contato</a>
-                    </li>
-                </ul>
-            </div>
-            <div><img src="media/img/mulher-treinando.png" alt=""></div>
-        </div>
-    </section>
-    <section class="bg">
-    </section>
+        </section>
+        <div class="bg"></div>
+    </main>
     <footer class="footer-bg">
         <div class="footer">
             <p>Desenvolvido por<span>Juberlandio</span></p>
         </div>
-    </footer> -->
+    </footer>
     <script src="js/script.js"></script>
 </body>
 
