Commit Final dia 27

--- a/index.html
+++ b/index.html
@@ -70,24 +70,24 @@
     </header>
 
     <main>
-        <section class="introducao-bg box-apresentacao">
-            <div class="introducao container">
-                <div class="informacao">
-                    <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
-                    <p class=" font-3-m cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
-                    <ul>
-                        <li class="item-introducao">
-                            <a class="item-introducao-a font-1-bn cor-0" href="#">Começar<img class="item-introducao-img" src="media/svg/arrow_introducao.svg" alt=""></a>
-                        </li>
-                    </ul>
+        <section class="introducao-bg box-border">
+                <div class="introducao container container-border">
+                    <div class="informacao">
+                        <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
+                        <p class=" font-3-m cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
+                        <ul>
+                            <li class="item-introducao">
+                                <a class="item-introducao-a font-1-bn cor-0" href="#">Começar<img class="item-introducao-img" src="media/svg/arrow_introducao.svg" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="imagem-introducao"><img src="media/img/homem_treinando 1.png" alt=""></div>
+                    <div class="container-cores">
+                        <div class="cor-primaria"></div>
+                        <div class="cor-secundaria"></div>
+                        <div class="cor-terciaria"></div>
+                    </div>
                 </div>
-                <div class="imagem-introducao"><img src="media/img/homem_treinando 1.png" alt=""></div>
-                <div class="container-cores">
-                    <div class="cor-primaria"></div>
-                    <div class="cor-secundaria"></div>
-                    <div class="cor-terciaria"></div>
-                </div>
-            </div>
         </section>
         <div class="letreiro-bg">
             <div class="letreiro">
