--- a/index.html
+++ b/index.html
@@ -154,48 +154,53 @@
             </div>
         </article>
         <section class="planos-bg">
-            <div class="planos">
+            <div class="titulo-planos">
+                <h1 class="font-1-l-b cor-0">nossos planos</h1>
+            </div>
+            <div class="planos container">
                 <div class="treino-1">
                     <img src="media/img/treino_1.jpg" alt="">
-                    <h2>Passe de um Dia</h2>
+                    <h2 class="font-1-m-b cor-0">Passe de um Dia</h2>
                     <div class="planos-preco">
                         <div>
-                            <p>teste Gratuitamente</p>
+                            <p class="font-3-xm cor-8">Teste gratuitamente</p>
                         </div>
                         <div>
-                            <div>
-                                <p>Selecionar</p>
+                            <div class="border">
+                                <p class="font-3-m cor-8">Selecionar</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="treino-2">
                     <div class="item-central">
-                        <p>Recomendado por usuários</p>
+                        <p class="font-3-m cor-0">Recomendado por usuários</p>
                     </div>
                     <img src="media/img/treino_2.jpg" alt="">
-                    <h2>Passe de um Dia</h2>
-                    <div class=" planos-preco">
+                    <h2 class="font-1-m-b cor-0">Passe de um Mês</h2>
+                    <div class="planos-preco">
                         <div>
-                            <p>À partir de <br><span>R$99,90</span></p>
+                            <p class="font-3-xm cor-8">À partir de</p>
+                            <span class="preco font-3-xm cor-0">R$99,90</span>
                         </div>
                         <div>
-                            <div>
-                                <p>Selecionar</p>
+                            <div class="border">
+                                <p class="font-3-m cor-8">Selecionar</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="treino-3">
                     <img src="media/img/treino_3.jpg" alt="">
-                    <h2>Passe de um Dia</h2>
+                    <h2 class="font-1-m-b cor-0">Passe de 1 ano</h2>
                     <div class="planos-preco">
                         <div>
-                            <p>À partir de <br><span>R$999,00</span></p>
+                            <p class="font-3-xm cor-8">À partir de</p>
+                            <span class="preco font-3-xm cor-0">R$999,00</span>
                         </div>
                         <div>
-                            <div>
-                                <p>Selecionar</p>
+                            <div class="border">
+                                <p class="font-3-m cor-8">Selecionar</p>
                             </div>
                         </div>
                     </div>
