--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <h2 class="font-1-m-b cor-0">Passe de um Dia</h2>
                     <div class="planos-preco">
                         <div>
-                            <p class="font-3-xm cor-8">Teste gratuitamente</p>
+                            <p class="font-3-xm cor-8">Teste gratuita<wbr>mente</p>
                         </div>
                         <div>
                             <div class="border">
