--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <h2 class="font-1-m-b cor-0">Passe de um Dia</h2>
                     <div class="planos-preco">
                         <div>
-                            <p class="font-3-xm cor-8">Teste gratuita<wbr>mente</p>
+                            <p class="font-3-xm cor-8">Teste gratuitamente</p>
                         </div>
                         <div>
                             <div class="border">
@@ -173,11 +173,11 @@
                     </div>
                 </div>
                 <div class="treino-2">
-                    <div class="item-central">
+                    <div class="item-central animacao-cores">
                         <p class="font-3-m cor-0">Recomendado por usuários</p>
                     </div>
                     <img src="media/img/treino_2.jpg" alt="">
-                    <h2 class="font-1-m-b cor-0">Passe de um Mês</h2>
+                    <h2 class="animacao-cores font-1-m-b cor-0">Passe de um Mês</h2>
                     <div class="planos-preco">
                         <div>
                             <p class="font-3-xm cor-8">À partir de</p>
