--- a/index.html
+++ b/index.html
@@ -71,23 +71,23 @@
 
     <main>
         <section class="introducao-bg box-border">
-                <div class="introducao container container-border">
-                    <div class="informacao">
-                        <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
-                        <p class=" font-3-m cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
-                        <ul>
-                            <li class="item-introducao">
-                                <a class="item-introducao-a font-1-bn cor-0" href="#">Começar<img class="item-introducao-img" src="media/svg/arrow_introducao.svg" alt=""></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="imagem-introducao"><img src="media/img/homem_treinando 1.png" alt=""></div>
-                    <div class="container-cores">
-                        <div class="cor-primaria"></div>
-                        <div class="cor-secundaria"></div>
-                        <div class="cor-terciaria"></div>
-                    </div>
+            <div class="introducao container container-border">
+                <div class="informacao">
+                    <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
+                    <p class=" font-3-m cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
+                    <ul>
+                        <li class="item-introducao">
+                            <a class="item-introducao-a font-1-bn cor-0" href="#">Começar<img class="item-introducao-img" src="media/svg/arrow_introducao.svg" alt=""></a>
+                        </li>
+                    </ul>
                 </div>
+                <div class="imagem-introducao"><img src="media/img/homem_treinando 1.png" alt=""></div>
+                <div class="container-cores">
+                    <div class="cor-primaria"></div>
+                    <div class="cor-secundaria"></div>
+                    <div class="cor-terciaria"></div>
+                </div>
+            </div>
         </section>
         <div class="letreiro-bg">
             <div class="letreiro">
@@ -208,24 +208,26 @@
             </div>
         </section>
         <section class="vantagens-bg">
-            <div class="vantagens">
+            <div class="vantagens container">
                 <div><img src="media/img/homem_e_mulher_treinando.png" alt=""></div>
                 <div>
                     <div class="titulo-vantagens">
-                        <h1>Faça Parte <span>da família</span></h1>
-                        <p>Nossa academia tem milhares de clientes satisfeitos com resultados surpreendentes. Junte-se a nós e comece a transformar seu corpo agora!</p>
+                        <h1 class="font-2-l cor-0">Faça Parte <span class="font-1-l cor-0">da família</span></h1>
+                        <p class="font-3-mm cor-0">Nossa academia tem milhares de clientes satisfeitos com resultados surpreendentes. Junte-se a nós e comece a transformar seu corpo agora!</p>
                     </div>
-                    <div class="vantangens-1">
-                        <h2>+15</h2>
-                        <p>Unidades na cidade de São Paulo</p>
-                    </div>
-                    <div class="vantangens-1">
-                        <h2>+2000</h2>
-                        <p>Alunos matriculados em nossas unidades</p>
-                    </div>
-                    <div class="vantangens-1">
-                        <h2>+100</h2>
-                        <p>Professores altamente qualificados</p>
+                    <div class="item-vantagens">
+                        <div class="vantangens-1">
+                            <h2 class="font-1-m cor-0">+15</h2>
+                            <p class="font-3-mm cor-0">Unidades na cidade de São Paulo</p>
+                        </div>
+                        <div class="vantangens-1">
+                            <h2 class="font-1-m cor-0">+2000</h2>
+                            <p class="font-3-mm cor-0">Alunos matriculados em nossas unidades</p>
+                        </div>
+                        <div class="vantangens-1">
+                            <h2 class="font-1-m cor-0">+100</h2>
+                            <p class="font-3-mm cor-0">Professores altamente qualificados</p>
+                        </div>
                     </div>
                 </div>
             </div>
