--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
         </section>
         <section class="vantagens-bg">
-            <div class="vantagens container">
+            <div class="vantagens container container-border">
                 <div><img src="media/img/homem_e_mulher_treinando.png" alt=""></div>
                 <div>
                     <div class="titulo-vantagens">
@@ -229,6 +229,11 @@
                             <p class="font-3-mm cor-0">Professores altamente qualificados</p>
                         </div>
                     </div>
+                </div>
+                <div class="container-cores">
+                    <div class="cor-primaria"></div>
+                    <div class="cor-secundaria"></div>
+                    <div class="cor-terciaria"></div>
                 </div>
             </div>
         </section>
