--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </section>
         <section class="vantagens-bg">
             <div class="vantagens container container-border">
-                <div><img src="media/img/homem_e_mulher_treinando.png" alt=""></div>
+                <div class="imagem"><img src="media/img/homem_e_mulher_treinando.png" alt=""></div>
                 <div>
                     <div class="titulo-vantagens">
                         <h1 class="font-2-l cor-0">Faça Parte <span class="font-1-l cor-0">da família</span></h1>
