--- a/index.html
+++ b/index.html
@@ -238,30 +238,28 @@
             </div>
         </section>
         <section class="contato-bg">
-            <div class="contato">
-                <div>
-                    <h1>Entre em Contato</h1>
-                    <p>Matricule-se agora mesmo! Fale com um de nossos atendentes</p>
+            <div class="contato container">
+                <div class="container-conteudo">
+                    <h1 class="font-1-l-b cor-0">Entre em Contato</h1>
+                    <p class="font-3-xm cor-0">Matricule-se agora mesmo! Fale com um de nossos atendentes</p>
                     <form class="newsletter-form">
-                        <input type="text" placeholder="Nome">
-                    </form>
-                    <form class="newsletter-form">
-                        <input type="number" placeholder="Telefone">
+                        <input class="font-3-m nome" type="text" placeholder="Nome">
+                        <input class="font-3-m telefone" type="number" placeholder="Telefone">
                     </form>
                     <ul>
-                        <li class="item-contato">
+                        <li class="item-contato font-3-m cor-0">
                             <a href="#"><img src="media/img/arrow.png" alt="">Solicitar Contato</a>
                         </li>
                     </ul>
                 </div>
-                <div><img src="media/img/mulher-treinando.png" alt=""></div>
+                <div class="imagem-contato"><img src="media/img/mulher-treinando.png" alt=""></div>
             </div>
         </section>
         <div class="bg"></div>
     </main>
     <footer class="footer-bg">
         <div class="footer">
-            <p>Desenvolvido por<span>Juberlandio</span></p>
+            <p class="font-3-m cor-0">Desenvolvido por<span class="cor-p1">Juberlandio</span></p>
         </div>
     </footer>
     <script src="js/script.js"></script>
