--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             </div>
             <ul class="menu">
                 <li class="menu-item">
-                    <a href="#about">SOBRE</a>
+                    <a href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank">SOBRE</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#services">SERVIÇOS</a>
+                    <a href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank">SERVIÇOS</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#prices">PREÇOS</a>
+                    <a href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank">PREÇOS</a>
                 </li>
                 <LI class="menu-item">
-                    <a href="#contact">CONTATOS</a>
+                    <a href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank">CONTATOS</a>
                 </LI>
                 <li class="menu-item">
-                    <a href="#">REGISTRE-SE</a>
+                    <a href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank">REGISTRE-SE</a>
                 </li>
             </ul>
         </nav>
@@ -52,19 +52,19 @@
         </nav>
         <ul id="menu-items" class="menu-items cor-0 font-1-b">
             <li class="menu-item">
-                <a href="#about">SOBRE</a>
+                <a onclick="abrir()" href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank">SOBRE</a>
             </li>
             <li class="menu-item">
-                <a onclick="abrir()" href="#services">SERVIÇOS</a>
+                <a onclick="abrir()" href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank">SERVIÇOS</a>
             </li>
             <li class="menu-item">
-                <a onclick="abrir()" href="#prices">PREÇOS</a>
+                <a onclick="abrir()" href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank">PREÇOS</a>
             </li>
             <LI class="menu-item">
-                <a onclick="abrir()" href="#contact">CONTATO</a>
+                <a onclick="abrir()" href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank">CONTATO</a>
             </LI>
             <li class="menu-item">
-                <a onclick="abrir()" href="#">REGISTRE-SE</a>
+                <a onclick="abrir()" href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank">REGISTRE-SE</a>
             </li>
         </ul>
     </header>
@@ -74,10 +74,10 @@
             <div class="introducao container container-border">
                 <div class="informacao">
                     <h1 class="font-2-xl cor-0">AQUI NÃO SE <br> <span class="font-1-xxl">TREINA FOFO</span></h1>
-                    <p class=" font-3-m cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
+                    <p class=" font-3-mm cor-0">Transforme-se na nossa academia! Oferecemos equipamentos modernos, instrutores qualificados e aulas para todos os níveis. Alcance seus objetivos fitness conosco. Experimente hoje!</p>
                     <ul>
                         <li class="item-introducao">
-                            <a class="item-introducao-a font-1-bn cor-0" href="#">Começar<img class="item-introducao-img" src="media/svg/arrow_introducao.svg" alt=""></a>
+                            <a class="item-introducao-a font-1-bn cor-0" href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank">Começar<img class="item-introducao-img" src="media/svg/arrow_introducao.svg" alt=""></a>
                         </li>
                     </ul>
                 </div>
@@ -259,7 +259,7 @@
 </main>
 <footer class="footer-bg">
     <div class="footer">
-        <p class="font-3-m cor-0">Desenvolvido por<span class="cor-p1">Juberlandio</span></p>
+        <a href="https://www.linkedin.com/in/juberlandiooliveira/" target="_blank"><p class="font-3-m cor-0">Desenvolvido por<wbr><span class="cor-p1">Juberlandio</span></p></a>
     </div>
 </footer>
     <script src="js/script.js"></script>
