--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="topo">
-        <nav class="nav-bar container cor-0 font-1-b">
+        <nav class="nav-bar js-menu container cor-0 font-1-b">
             <div class="container-logo">
                 <img src="media/img/logo.png" alt="Logo Robust Habit">
             </div>
@@ -50,7 +50,7 @@
                 <!-- <div class="terceiro"></div> -->
             </div>
         </nav>
-        <ul id="menu-items" class="menu-items cor-0 font-1-b">
+        <ul id="menu-items" class="menu-items js-menu cor-0 font-1-b">
             <li class="menu-item">
                 <a onclick="abrir()" href="#sobre">SOBRE</a>
             </li>
